--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body onclose="close()">
-    <div class="container-xxl">
+    <div class="container-xxl" style="margin-top:-3%;z-index:5">
         <div class="col">
             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
@@ -42,7 +42,7 @@
     <div id="con1" class="container-xxl flex-grow-1 container-p-y">
         <div class="row">
             <div class="col">
-                <select name="state" id="select-state" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bxs-info-circle bx-xs' ></i> <span>Seçilen personele göre liste güncellenir</span>" onchange="location.href='@Url.Action("GET", "IK")/'+value" class="js-example-matcher-start form-select dropdown-toggle">
+                <select name="state" id="select-state" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bxs-info-circle bx-xs' ></i> <span>Seçilen personele göre liste güncellenir</span>" onchange="location.href='@Url.Action("GET", "IK")/'+value" class="js-example-matcher-start form-select dropdown-toggle" style="width:50%">
                     
 
                     @{
@@ -131,7 +131,7 @@
                     <!-- Account -->
                     <hr class="my-0">
 
-                    <div class="card-body" id="table">
+                    <div class="card-body" id="table" style="max-height:55vh">
                         @if (ViewBag.Personel == null && ViewBag.Ekle == null)
                         {
                             using (Html.BeginForm("PersonelYonetim", "IK", FormMethod.Post, new { @id = "myPersonalForm" }))
@@ -364,7 +364,7 @@
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col">
-                                        <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞINIZ TARİH</label>
+                                        <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞI TARİH</label>
                                         <input class="form-control" type="date" id="MEVCUT_IS_ILK_TARIH" name="MEVCUT_IS_ILK_TARIH" disabled>
                                     </div>
                                     <div class="col">
@@ -472,13 +472,7 @@
                                 </div>
 
                                 <hr class="my-0 mt-3">
-                                <div class="row mt-3">
-                                    <div class="col">
-                                        <button type="button" class="ekle btn btn-info float-end" onclick="myKaydetFunction()" disabled>GÜNCELLE</button>
-                                    </div>
 
-
-                                </div>
 
 
                             }
@@ -2095,7 +2089,7 @@
                                     </div>
                                     <div class="row mt-2">
                                         <div class="col-3">
-                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞINIZ TARİH</label>
+                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞI TARİH</label>
                                             @if (ViewBag.Personel.MEVCUT_IS_ILK_TARIH != null)
                                             {
 
@@ -2300,6 +2294,72 @@
                                             else
                                             {
                                                 <input class="form-control duzenle" type="date" id="IS_CIKIS_TARIH" name="IS_CIKIS_TARIH" value=" ">
+
+                                            }
+                                        </div>
+                                    </div>
+                                    <div class="row mt-2">
+                                        <div class="col-3">
+                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞI TARİH - 2</label>
+                                            @if (ViewBag.Personel.MEVCUT_IS_ILK_TARIH2 != null)
+                                            {
+
+                                                <input class="form-control duzenle" type="date" id="MEVCUT_IS_ILK_TARIH2" name="MEVCUT_IS_ILK_TARIH2" value="@ViewBag.Personel.MEVCUT_IS_ILK_TARIH2.ToString("yyyy-MM-dd")">
+
+                                            }
+                                            else
+                                            {
+                                                <input class="form-control duzenle" type="date" id="MEVCUT_IS_ILK_TARIH2" name="MEVCUT_IS_ILK_TARIH2" value=" ">
+
+                                            }
+                                        </div>
+                                        <div class="col-3">
+
+                                        </div>
+                                        <div class="col-6">
+                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DEN AYRILIŞ TARİHİ - 2</label>
+                                            @if (ViewBag.Personel.IS_CIKIS_TARIH2 != null)
+                                            {
+
+                                                <input class="form-control duzenle" type="date" id="IS_CIKIS_TARIH2" name="IS_CIKIS_TARIH2" value="@ViewBag.Personel.IS_CIKIS_TARIH2.ToString("yyyy-MM-dd")">
+
+                                            }
+                                            else
+                                            {
+                                                <input class="form-control duzenle" type="date" id="IS_CIKIS_TARIH2" name="IS_CIKIS_TARIH2" value=" ">
+
+                                            }
+                                        </div>
+                                    </div>
+                                    <div class="row mt-1">
+                                        <div class="col-3">
+                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞI TARİH - 3</label>
+                                            @if (ViewBag.Personel.MEVCUT_IS_ILK_TARIH3 != null)
+                                            {
+
+                                                <input class="form-control duzenle" type="date" id="MEVCUT_IS_ILK_TARIH3" name="MEVCUT_IS_ILK_TARIH3" value="@ViewBag.Personel.MEVCUT_IS_ILK_TARIH3.ToString("yyyy-MM-dd")">
+
+                                            }
+                                            else
+                                            {
+                                                <input class="form-control duzenle" type="date" id="MEVCUT_IS_ILK_TARIH3" name="MEVCUT_IS_ILK_TARIH3" value=" ">
+
+                                            }
+                                        </div>
+                                        <div class="col-3">
+
+                                        </div>
+                                        <div class="col-6">
+                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DEN AYRILIŞ TARİHİ - 3</label>
+                                            @if (ViewBag.Personel.IS_CIKIS_TARIH3 != null)
+                                            {
+
+                                                <input class="form-control duzenle" type="date" id="IS_CIKIS_TARIH3" name="IS_CIKIS_TARIH3" value="@ViewBag.Personel.IS_CIKIS_TARIH3.ToString("yyyy-MM-dd")">
+
+                                            }
+                                            else
+                                            {
+                                                <input class="form-control duzenle" type="date" id="IS_CIKIS_TARIH3" name="IS_CIKIS_TARIH3" value=" ">
 
                                             }
                                         </div>
@@ -3124,13 +3184,13 @@
                                     </div>
 
 
-                                    <div class="row mt-3">
-                                        <div class="col">
-                                            <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()">GÜNCELLE</button>
-                                        </div>
+                                    @*<div class="row mt-3">
+                        <div class="col">
+                            <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()">GÜNCELLE</button>
+                        </div>
 
 
-                                    </div>
+                    </div>*@
                                 }
                                 else if (ViewBag.Yetki != null && ViewBag.Ekle != null)
                                 {
@@ -3358,7 +3418,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col">
-                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞINIZ TARİH</label>
+                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞI TARİH</label>
                                             <input class="form-control" type="date" id="MEVCUT_IS_ILK_TARIH" name="MEVCUT_IS_ILK_TARIH">
                                         </div>
                                     </div>
@@ -5172,7 +5232,7 @@
                                     </div>
                                     <div class="row mt-2">
                                         <div class="col-3">
-                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞINIZ TARİH</label>
+                                            <label class="form-label">EFECE GALVANİZ A.Ş.'DE İŞE BAŞLADIĞI TARİH</label>
                                             @if (ViewBag.Personel.MEVCUT_IS_ILK_TARIH != null)
                                             {
 
@@ -5351,7 +5411,7 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
-                                                    <option value="EFECE 5" >EFECE 5</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
                                                     <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
@@ -6078,13 +6138,13 @@
                                     </div>
 
 
-                                    <div class="row mt-3">
-                                        <div class="col">
-                                            <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()" disabled>GÜNCELLE</button>
-                                        </div>
+                                    @*<div class="row mt-3">
+                        <div class="col">
+                            <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()" disabled>GÜNCELLE</button>
+                        </div>
 
 
-                                    </div>
+                    </div>*@
                                 }
 
                             }
@@ -6096,10 +6156,18 @@
                     </div>
                     <!-- /Account -->
                 </div>
+
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="button" class="ekle btn btn-info float-end" onclick="myKaydetFunction()">GÜNCELLE</button>
+                </div>
+
+
             </div>
         </div>
     </div>
-    <div id="con2" class="container-xxl">
+    <div id="con2" class="container-xxl" style="z-index:5">
         <div id="employeeTableWrapper" class="tableWrapper table-responsive">
             <table id="table"
                    class="table table-striped"
@@ -6115,6 +6183,8 @@
                    data-show-columns-toggle-all="true"
                    data-locale="tr-TR"
                    data-filter-control="true"
+                   data-page-list="[5,10, 25, 50, 100, 200, All]"
+                   data-page-size="5"
                    data-filter-control-multiple-search="true"
                    data-export-options='{"fileName": "IK_Personel_Bilgileri"}'
                    data-url="http://192.168.2.13:83/api/personel">
@@ -6148,6 +6218,8 @@
                         <th data-align="center" data-field="EHLIYET_VAR" data-sortable="true" data-visible="false">EHLIYET VAR</th>
                         <th data-align="center" data-field="EHLIYET_SINIF" data-sortable="true" data-visible="false">EHLIYET SINIF</th>
                         <th data-align="center" data-field="MEVCUT_IS_ILK_TARIH" data-sortable="true" data-formatter="tarihFormatter">EFECE'DE İŞE BAŞLAMA TARİHİ</th>
+                        <th data-align="center" data-field="MEVCUT_IS_ILK_TARIH2" data-sortable="true" data-formatter="tarihFormatter">EFECE'DE İŞE BAŞLAMA TARİHİ2</th>
+                        <th data-align="center" data-field="MEVCUT_IS_ILK_TARIH3" data-sortable="true" data-formatter="tarihFormatter">EFECE'DE İŞE BAŞLAMA TARİHİ3</th>
                         <th data-align="center" data-field="ILETISIM_BILGI_MAIL" data-sortable="true" data-visible="false">ILETISIM BILGI MAIL</th>
                         <th data-align="center" data-field="ACIL_DURUM_KISI" data-sortable="true" data-visible="false">ACIL DURUM KISI</th>
                         <th data-align="center" data-field="ACIL_DURUM_KISI_ILETISIM" data-sortable="true" data-visible="false">ACIL DURUM KISI ILETISIM</th>
@@ -6161,6 +6233,8 @@
                         <th data-align="center" data-field="GOREV" data-sortable="true" data-visible="false">GOREV</th>
                         <th data-align="center" data-field="CALISILAN_BIRIM" data-sortable="true">CALISILAN BIRIM</th>
                         <th data-align="center" data-field="IS_CIKIS_TARIH" data-sortable="true" data-formatter="tarihFormatter" data-visible="false">IS CIKIS TARIH</th>
+                        <th data-align="center" data-field="IS_CIKIS_TARIH2" data-sortable="true" data-formatter="tarihFormatter" data-visible="false">IS CIKIS TARIH2</th>
+                        <th data-align="center" data-field="IS_CIKIS_TARIH3" data-sortable="true" data-formatter="tarihFormatter" data-visible="false">IS CIKIS TARIH3</th>
                     </tr>
                 </thead>
             </table>
