--- a/NOVA/Views/IsEmri/Test.cshtml
+++ b/NOVA/Views/IsEmri/Test.cshtml
@@ -1151,14 +1151,18 @@
 
 
             }
-            var takiplist2 = JSON.parse(localStorage.list11);
+            var takiplist2 = null;
+            if (localStorage.list11 != null && localStorage.list11 != "null") {
+               takiplist2 = JSON.parse(localStorage.list11);
+            }
+            
             var sira2 = 1;
             
             if (p.length > 0) {
 
                 getPivot();
                 
-                if (takiplist2.length > 0) {
+                if (takiplist2!=null) {
                     getPivot2();
                 }
             }
