--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -318,7 +318,7 @@
         termin = data;
 
     })
-    $.getJSON('http://192.168.2.13:83/api/mongo/stok', function (data) {
+    $.getJSON('http://192.168.2.13:83/api/stok', function (data) {
         for (let i = 0; i < data.length; i++) {
             if (!grupisimleri.includes(data[i].GRUP_ISIM)) {
                 grupisimleri.push(data[i].GRUP_ISIM);
