--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -49,6 +49,8 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
+
     <script>
         $(function () {
             $('table').on('post-body.bs.table', function () {
@@ -111,14 +113,13 @@
 
                 @RenderBody()
 
-            <div class="foot" style="position:absolute;bottom:0;width:80%">
-
-                <div class="text-center" style="margin-left:7%">
-                    ©
-                    <script>document.write(2022);</script>, designed by
-                    <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
+                <div class="foot" style="position:absolute;bottom:0;right:0;left:0;">
+                    <div class="text-center">
+                        ©
+                        <script>document.write(2022);</script>, designed by
+                        <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
+                    </div>
                 </div>
-            </div>
 
             </div>
         </div>
