--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -9,8 +9,7 @@
       data-template="vertical-menu-template-free">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
     <meta name="viewport" content="user-scalable=no, width=device-width" />
     <title>Nova | Efece Galvaniz/Sipariş Raporu</title>
@@ -32,17 +31,16 @@
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script type="text/javascript" src="\assets\js\config.js"></script>
-
     <script src="~/assets/js/ui-modals.js"></script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" type="text/css" />
     <link href="https://unpkg.com/bootstrap-table@1.21.4/dist/extensions/group-by-v2/bootstrap-table-group-by.css" rel="stylesheet">
     <!-- Icons. Uncomment required icon fonts -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.css">
 
 </head>
 <body class="framebody">
@@ -189,11 +187,12 @@
                 <!-- / Content -->
                 <!-- Footer -->
                 <div class="foot" style="position:absolute;bottom:0;width:80%">
-                    
-                        <div class="text-center" style="margin-left:7%">
-                            ©<script>document.write(2022);</script>, designed by
-                            <a href="#" target="_blank" > <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
-                        </div>
+
+                    <div class="text-center" style="margin-left:7%">
+                        ©
+                        <script>document.write(2022);</script>, designed by
+                        <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
+                    </div>
                 </div>
                 <!-- / Footer -->
 
@@ -278,10 +277,10 @@
                                     '<li data-page="' +
                                     i +
                                     '">\
-                                                                                                                                          <span>' +
+                                                                                                                                                  <span>' +
                                     i++ +
                                     '<span class="sr-only">(current)</span></span>\
-                                                                                                                                        </li>'
+                                                                                                                                                </li>'
                                 )
                                 .show();
                         } // end for i
@@ -360,17 +359,21 @@
 
     </script>
 
-    <script>
-        var browserZoomLevel = Math.round(window.devicePixelRatio * 100);
+    @*<script>
+        /*var browserZoomLevel = Math.round(window.devicePixelRatio * 100);
         if (browserZoomLevel == 125 || browserZoomLevel == 150) {
             document.body.style.zoom = "80%";
         }
         if (browserZoomLevel == 100) {
             document.body.style.zoom = "100%";
-        }
-    </script>
+        }*/
+    </script>*@
 
     @RenderSection("scripts", required: false)
+    
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
