Başlıklar stilleri düzeltildi.

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -19,7 +19,9 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
 
     <style>
-
+        .th-inner {
+            white-space: unset !important;
+        }
         video {
             margin-left: 27%;
             width: 50% !important;
@@ -353,27 +355,27 @@
                             <thead>
                                 <tr>
                                     <th data-field="TARIH" data-halign="center" data-align="center" data-sortable="true">TARİH</th>
-                                    <th data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAM_SERINO</th>
-                                    <th data-field="HAM_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">HAM_STOK_KODU</th>
-                                    <th data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAM_ADI</th>
-                                    <th data-field="HAM_DETAY" data-width="150" data-halign="center" data-align="center" data-sortable="true">HAM_DETAY</th>
-                                    <th data-field="HAM_GENISLIK" data-halign="center" data-align="center" data-sortable="true">HAM_GENISLIK</th>
-                                    <th data-field="HAM_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM_KALINLIK</th>
-                                    <th data-field="HAM_FIRMA_SERI" data-halign="center" data-align="center" data-sortable="true">HAM_FIRMA_SERI</th>
-                                    <th data-field="ACIKLAMA_4" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA_4</th>
-                                    <th data-field="ACIKLAMA_5" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA_5</th>
-                                    <th data-field="HAM_KALITE" data-halign="center" data-align="center" data-sortable="true">HAM_KALITE</th>
-                                    <th data-field="HAM_KAP_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM_KAP_KALINLIK</th>
-                                    <th data-field="HAM_MIKTAR" data-halign="center" data-align="center" data-sortable="true">HAM_MIKTAR</th>
+                                    <th data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAM SERINO</th>
+                                    <th data-field="HAM_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">HAM STOK KODU</th>
+                                    <th data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAM ADI</th>
+                                    <th data-field="HAM_DETAY" data-width="150" data-halign="center" data-align="center" data-sortable="true">HAM DETAY</th>
+                                    <th data-field="HAM_GENISLIK" data-halign="center" data-align="center" data-sortable="true">HAM GENISLIK</th>
+                                    <th data-field="HAM_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KALINLIK</th>
+                                    <th data-field="HAM_FIRMA_SERI" data-halign="center" data-align="center" data-sortable="true">HAM FIRMA SERI</th>
+                                    <th data-field="ACIKLAMA_4" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 4</th>
+                                    <th data-field="ACIKLAMA_5" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 5</th>
+                                    <th data-field="HAM_KALITE" data-halign="center" data-align="center" data-sortable="true">HAM KALITE</th>
+                                    <th data-field="HAM_KAP_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KAP KALINLIK</th>
+                                    <th data-field="HAM_MIKTAR" data-halign="center" data-align="center" data-sortable="true">HAM MIKTAR</th>
                                     <th data-field="USTISEMRI" data-halign="center" data-align="center" data-sortable="true">USTISEMRI</th>
-                                    <th data-field="ALT_ISEMRI" data-halign="center" data-align="center" data-sortable="true">ALT_ISEMRI</th>
+                                    <th data-field="ALT_ISEMRI" data-halign="center" data-align="center" data-sortable="true">ALT ISEMRI</th>
                                     <th data-field="SIRA" data-halign="center" data-align="center" data-sortable="true">SIRA</th>
-                                    <th data-field="URT_SERINO" data-halign="center" data-align="center" data-sortable="true">URT_SERINO</th>
-                                    <th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">URT_STOK_KODU</th>
-                                    <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">URT_STOK_ADI</th>
-                                    <th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">URT_GENISLIK</th>
-                                    <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true">IE_MIKTAR2</th>
-                                    <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true">IE_MIKTAR</th>
+                                    <th data-field="URT_SERINO" data-halign="center" data-align="center" data-sortable="true">URT SERINO</th>
+                                    <th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">URT STOK KODU</th>
+                                    <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">URT STOK ADI</th>
+                                    <th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">URT GENISLIK</th>
+                                    <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true">IE MIKTAR2</th>
+                                    <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true">IE MIKTAR</th>
                                     <th data-field="REFISEMRINO" data-halign="center" data-align="center" data-sortable="true">REFISEMRINO</th>
                                     <th data-field="REF_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">REF_STOK_KODU</th>
                                     <th data-field="REF_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">REF_STOK_ADI</th>
